--- a/templates/login.html
+++ b/templates/login.html
@@ -3,13 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="http://127.0.0.1:8000/logo/">
+    <link rel="icon" href="/logo/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>加载中。。。</title>
     <style>
       body {
           /* 设置背景图片的位置 */
-          background-image: url('{% static "login/background-cdf55e3f.jpg" %}');
+          background-image: url('{% static 'login/background-cdf55e3f.jpg' %}');
           /* 设置背景图片在视口中居中 */
           background-position: center center;
           /* 设置背景图片不重复 */
@@ -20,10 +20,11 @@
           background-size: cover;
         }
     </style>
-    <script type="module" crossorigin src="{% static 'login/index-c86c2e41.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'login/index-c8888139.css' %}">
+    <script type="module" crossorigin src="{% static 'login/index-5e6877ad.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'login/index-679a97ad.css' %}">
   </head>
   <body>
     <div id="login"></div>
+    
   </body>
 </html>
